    - Removed unnecessary members from AbstractSensorChannel.
    - Simplified AbstractSensorChannel start/stop handling.
    - Const correctness fixes.
    - DataEmitter unused exposed source removed.
    - AdaptedSensorEntry is no longer QObject and removed interval handling from it.
    - Removed obsolete signal handling from SysfsAdaptor and SysfsAdaptorReader.
  * Downsampling (which works by dropping samples) can be now enabled/disabled.
  * OrientationInterpreter filter orientation_buffer_size is now configurable.
  * Threshold accessors removed from OrientationFilter since those had no effect.
  * OrientationInterpreter default settings now provide more sensitive orientation detection. Fixes: NB#232872.
  * Proximity sensor dataflow now uses datatype ProximityData. 
  * ProximitySensorChannelInterface provides signal and accessor for getting proximity reading with reflectance value.
  * c-api removed from doxygen targets.
  * Config-class now better handles errors.
  * AccelerometerAdaptor used for some reason OrientationData. Should have
    been AccelerometerData. Only cosmetic change.
  * Implemented new downsampling logic (Fixes: NB#234563):
    - AccelerometerAdaptor, MagnetometerAdaptor and RotationSensorChannel interval rangelist has been limited to certain sizes.
    - AccelerometerSensorChannel, RotationSensorChannel and MagnetometerSensorChannel downsamples data before propagating it.
  * Config-class has now more friendly API.
  * sensordtestapp improvements.
  * API documentation improvements.
  * Improved dataflowtests.

  [Shenghua Liu]
  * Make sensortestapp thread safe in exiting
  * Fix sensord-tests-install 
  * Fix sensordtestapp for qt apt to print out proximity reflectance data
  * Fix the Proximity metatype registration problem
  * ProximityAdaptor now stores reflectance reading (Fixes: NB#234186)

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Tue, 29 Mar 2011 15:30:25 +0200

sensord (0.6.40) unstable; urgency=low
